src/main/java/se/got/parser/MISSIONParser.java
// Generated from MISSION.g4 by ANTLR 4.4

 	
 	package se.got.parser;
 	import se.got.ltl.atoms.LTLAtom;
 	
 	import se.got.ltl.atoms.LTLPAAtom;
 	import se.got.ltl.atoms.LTLPEAtom;
 	import se.got.ltl.atoms.LTLPLAtom;
 	import java.util.HashSet;
 	import se.got.patterns.Pattern;
 	import java.util.Set;
 	import se.got.patterns.coremovement.coverage.*;
 	import se.got.patterns.coremovement.surveillance.*;
 	import se.got.patterns.avoidance.conditional.*;
 	import se.got.patterns.avoidance.restricted.*;
 	import se.got.patterns.triggers.*;
 	import se.got.mission.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MISSIONParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__38=1, T__37=2, T__36=3, T__35=4, T__34=5, T__33=6, T__32=7, T__31=8, 
		T__30=9, T__29=10, T__28=11, T__27=12, T__26=13, T__25=14, T__24=15, T__23=16, 
		T__22=17, T__21=18, T__20=19, T__19=20, T__18=21, T__17=22, T__16=23, 
		T__15=24, T__14=25, T__13=26, T__12=27, T__11=28, T__10=29, T__9=30, T__8=31, 
		T__7=32, T__6=33, T__5=34, T__4=35, T__3=36, T__2=37, T__1=38, T__0=39, 
		WS=40, ID=41, NAT=42, TRUE=43, FALSE=44, NEWLINE=45, COMMA=46, COMMENT=47, 
		LINE_COMMENT=48;
	public static final String[] tokenNames = {
		"<INVALID>", "'robot '", "') then '", "' must not visit location '", "'exec'", 
		"' times'", "'ordered_patrolling('", "'fair_visit('", "' less than '", 
		"') then finally ('", "' exactly   '", "' holds'", "' must  visit location '", 
		"'strict_ordered_visit('", "' must avoid location '", "'strict_ordered_patrolling('", 
		"'after condition '", "'('", "'conditions:  {'", "'ordered_visit('", "'visit('", 
		"'mission: '", "'sequenced_patrolling('", "'sequenced_visit('", "') AND ('", 
		"'actions: {'", "') OR ('", "'if ('", "'until '", "'};'", "'fair_patrolling('", 
		"'wait'", "' more than '", "'patrolling('", "'in'", "' until condition '", 
		"' holds, robot '", "')'", "'robots: {'", "'locations:  {'", "WS", "ID", 
		"NAT", "'true'", "'false'", "NEWLINE", "','", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_mission = 0, RULE_robotsDecl = 1, RULE_actionDecl = 2, RULE_locationDecl = 3, 
		RULE_conditionsDecl = 4, RULE_pl = 5, RULE_pa = 6, RULE_pe = 7, RULE_goal = 8, 
		RULE_pattern = 9, RULE_avoidance = 10, RULE_conditional = 11, RULE_restricted = 12, 
		RULE_future_avoidance = 13, RULE_global_avoidance = 14, RULE_past_avoidance = 15, 
		RULE_lower_restricted_avoidance = 16, RULE_exact_restricted_avoidance = 17, 
		RULE_upper_restricted_avoidance = 18, RULE_core_movement_pattern = 19, 
		RULE_coverage = 20, RULE_surveillance = 21, RULE_visit = 22, RULE_sequenced_visit = 23, 
		RULE_ordered_visit = 24, RULE_strict_ordered_visit = 25, RULE_fair_visit = 26, 
		RULE_patrolling = 27, RULE_sequenced_patrolling = 28, RULE_ordered_patrolling = 29, 
		RULE_strict_ordered_patrolling = 30, RULE_fair_patrolling = 31, RULE_robot = 32, 
		RULE_action = 33, RULE_location = 34, RULE_condition = 35;
	public static final String[] ruleNames = {
		"mission", "robotsDecl", "actionDecl", "locationDecl", "conditionsDecl", 
		"pl", "pa", "pe", "goal", "pattern", "avoidance", "conditional", "restricted", 
		"future_avoidance", "global_avoidance", "past_avoidance", "lower_restricted_avoidance", 
		"exact_restricted_avoidance", "upper_restricted_avoidance", "core_movement_pattern", 
		"coverage", "surveillance", "visit", "sequenced_visit", "ordered_visit", 
		"strict_ordered_visit", "fair_visit", "patrolling", "sequenced_patrolling", 
		"ordered_patrolling", "strict_ordered_patrolling", "fair_patrolling", 
		"robot", "action", "location", "condition"
	};

	@Override
	public String getGrammarFileName() { return "MISSION.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	  boolean matchedEOF=false;
	 	
	 	
	 
	public MISSIONParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MissionContext extends ParserRuleContext {
		public Mission robotsmission;
		public RobotsDeclContext robotsDecl;
		public ActionDeclContext actionDecl;
		public LocationDeclContext locationDecl;
		public ConditionsDeclContext conditionsDecl;
		public GoalContext goal;
		public GoalContext goal() {
			return getRuleContext(GoalContext.class,0);
		}
		public LocationDeclContext locationDecl() {
			return getRuleContext(LocationDeclContext.class,0);
		}
		public ConditionsDeclContext conditionsDecl() {
			return getRuleContext(ConditionsDeclContext.class,0);
		}
		public ActionDeclContext actionDecl() {
			return getRuleContext(ActionDeclContext.class,0);
		}
		public RobotsDeclContext robotsDecl() {
			return getRuleContext(RobotsDeclContext.class,0);
		}
		public MissionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mission; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterMission(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitMission(this);
		}
	}

	public final MissionContext mission() throws RecognitionException {
		MissionContext _localctx = new MissionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mission);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(72); ((MissionContext)_localctx).robotsDecl = robotsDecl();
			setState(73); ((MissionContext)_localctx).actionDecl = actionDecl();
			setState(74); ((MissionContext)_localctx).locationDecl = locationDecl();
			setState(75); ((MissionContext)_localctx).conditionsDecl = conditionsDecl();
			setState(76); match(T__18);
			setState(77); ((MissionContext)_localctx).goal = goal();

						((MissionContext)_localctx).robotsmission = new Mission(((MissionContext)_localctx).goal.value, ((MissionContext)_localctx).robotsDecl.value, ((MissionContext)_localctx).actionDecl.value, ((MissionContext)_localctx).conditionsDecl.value, ((MissionContext)_localctx).locationDecl.value);
					
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotsDeclContext extends ParserRuleContext {
		public Set<String> value;
		public RobotContext robot;
		public List<RobotContext> robot() {
			return getRuleContexts(RobotContext.class);
		}
		public RobotContext robot(int i) {
			return getRuleContext(RobotContext.class,i);
		}
		public RobotsDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotsDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterRobotsDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitRobotsDecl(this);
		}
	}

	public final RobotsDeclContext robotsDecl() throws RecognitionException {
		RobotsDeclContext _localctx = new RobotsDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_robotsDecl);

			((RobotsDeclContext)_localctx).value = new HashSet<>();
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(T__1);
			setState(81); ((RobotsDeclContext)_localctx).robot = robot();

					_localctx.value.add(((RobotsDeclContext)_localctx).robot.value);
				
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83); match(COMMA);
				setState(84); ((RobotsDeclContext)_localctx).robot = robot();

						_localctx.value.add(((RobotsDeclContext)_localctx).robot.value);
					
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionDeclContext extends ParserRuleContext {
		public Set<String> value;
		public ActionContext action;
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public ActionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterActionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitActionDecl(this);
		}
	}

	public final ActionDeclContext actionDecl() throws RecognitionException {
		ActionDeclContext _localctx = new ActionDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_actionDecl);

			((ActionDeclContext)_localctx).value = new HashSet<>();
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(T__14);
			setState(95); ((ActionDeclContext)_localctx).action = action();

					_localctx.value.add(((ActionDeclContext)_localctx).action.value);
				
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(97); match(COMMA);
				setState(98); ((ActionDeclContext)_localctx).action = action();

						_localctx.value.add(((ActionDeclContext)_localctx).action.value);
					
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationDeclContext extends ParserRuleContext {
		public Set<String> value;
		public LocationContext location;
		public List<LocationContext> location() {
			return getRuleContexts(LocationContext.class);
		}
		public LocationContext location(int i) {
			return getRuleContext(LocationContext.class,i);
		}
		public LocationDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locationDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterLocationDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitLocationDecl(this);
		}
	}

	public final LocationDeclContext locationDecl() throws RecognitionException {
		LocationDeclContext _localctx = new LocationDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_locationDecl);

			((LocationDeclContext)_localctx).value = new HashSet<>();
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(T__0);
			setState(109); ((LocationDeclContext)_localctx).location = location();

					_localctx.value.add(((LocationDeclContext)_localctx).location.value);
				
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(111); match(COMMA);
				setState(112); ((LocationDeclContext)_localctx).location = location();

						_localctx.value.add(((LocationDeclContext)_localctx).location.value);
					
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsDeclContext extends ParserRuleContext {
		public Set<String> value;
		public ConditionContext condition;
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionsDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionsDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterConditionsDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitConditionsDecl(this);
		}
	}

	public final ConditionsDeclContext conditionsDecl() throws RecognitionException {
		ConditionsDeclContext _localctx = new ConditionsDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditionsDecl);

			((ConditionsDeclContext)_localctx).value = new HashSet<>();
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(T__21);
			setState(123); ((ConditionsDeclContext)_localctx).condition = condition();

					_localctx.value.add(((ConditionsDeclContext)_localctx).condition.value);
				
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(125); match(COMMA);
				setState(126); ((ConditionsDeclContext)_localctx).condition = condition();

						_localctx.value.add(((ConditionsDeclContext)_localctx).condition.value);
					
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlContext extends ParserRuleContext {
		public LTLPLAtom atom;
		public RobotContext robot;
		public LocationContext location;
		public RobotContext robot() {
			return getRuleContext(RobotContext.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public PlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterPl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitPl(this);
		}
	}

	public final PlContext pl() throws RecognitionException {
		PlContext _localctx = new PlContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); ((PlContext)_localctx).robot = robot();
			setState(137); match(T__5);
			setState(138); ((PlContext)_localctx).location = location();

				((PlContext)_localctx).atom = new LTLPLAtom(((PlContext)_localctx).robot.value, ((PlContext)_localctx).location.value);
				

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PaContext extends ParserRuleContext {
		public LTLPAAtom atom;
		public RobotContext robot;
		public ActionContext action;
		public RobotContext robot() {
			return getRuleContext(RobotContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public PaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterPa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitPa(this);
		}
	}

	public final PaContext pa() throws RecognitionException {
		PaContext _localctx = new PaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); ((PaContext)_localctx).robot = robot();
			setState(142); match(T__35);
			setState(143); ((PaContext)_localctx).action = action();

				((PaContext)_localctx).atom = new LTLPAAtom(((PaContext)_localctx).robot.value, ((PaContext)_localctx).action.value);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PeContext extends ParserRuleContext {
		public LTLPEAtom atom;
		public ConditionContext condition;
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public PeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterPe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitPe(this);
		}
	}

	public final PeContext pe() throws RecognitionException {
		PeContext _localctx = new PeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); ((PeContext)_localctx).condition = condition();

				((PeContext)_localctx).atom = new LTLPEAtom(((PeContext)_localctx).condition.value);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalContext extends ParserRuleContext {
		public Goal value;
		public PatternContext pattern;
		public GoalContext g1;
		public GoalContext g2;
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public List<GoalContext> goal() {
			return getRuleContexts(GoalContext.class);
		}
		public GoalContext goal(int i) {
			return getRuleContext(GoalContext.class,i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitGoal(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_goal);
		try {
			setState(166);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149); ((GoalContext)_localctx).pattern = pattern();

						((GoalContext)_localctx).value = new BasicGoal(((GoalContext)_localctx).pattern.value);
					
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152); match(T__22);
				setState(153); ((GoalContext)_localctx).g1 = goal();
				setState(154); match(T__15);
				setState(155); ((GoalContext)_localctx).g2 = goal();
				setState(156); match(T__2);

						((GoalContext)_localctx).value = new AndGoal(((GoalContext)_localctx).g1.value, ((GoalContext)_localctx).g2.value);
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(159); match(T__22);
				setState(160); ((GoalContext)_localctx).g1 = goal();
				setState(161); match(T__13);
				setState(162); ((GoalContext)_localctx).g2 = goal();
				setState(163); match(T__2);

						((GoalContext)_localctx).value = new OrGoal(((GoalContext)_localctx).g1.value, ((GoalContext)_localctx).g2.value);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternContext extends ParserRuleContext {
		public Pattern value;
		public Core_movement_patternContext core_movement_pattern;
		public AvoidanceContext avoidance;
		public PeContext pe;
		public PlContext pl;
		public PatternContext pattern;
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public AvoidanceContext avoidance() {
			return getRuleContext(AvoidanceContext.class,0);
		}
		public PeContext pe() {
			return getRuleContext(PeContext.class,0);
		}
		public PlContext pl() {
			return getRuleContext(PlContext.class,0);
		}
		public Core_movement_patternContext core_movement_pattern() {
			return getRuleContext(Core_movement_patternContext.class,0);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MISSIONListener ) ((MISSIONListener)listener).exitPattern(this);
		}
	}
